--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,28 +1,3 @@
-.App {
-  text-align: center; }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px; }
-
-.App-header {
-  background-color: aliceblue;
-  height: 150px;
-  padding: 20px;
-  color: white; }
-
-.App-title {
-  font-size: 1.5em; }
-
-.App-intro {
-  font-size: large; }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg); }
-  to {
-    transform: rotate(360deg); } }
-
 .header-view {
   height: 70px;
   width: 100%;
@@ -68,6 +43,23 @@
     transform: rotate(0deg); }
   100% {
     transform: rotate(360deg); } }
+
+.building-info-wrapper {
+  background-color: white; }
+  .building-info-wrapper .info-box {
+    min-height: 55px;
+    border: 1px solid black;
+    padding: 5px; }
+    .building-info-wrapper .info-box .sub-content {
+      font-size: 14px;
+      color: gray; }
+  .building-info-wrapper .info-box.meeting {
+    min-height: 80px; }
+  .building-info-wrapper .primary-btn {
+    background-color: #002642;
+    color: white;
+    font-size: 16px;
+    font-weight: 600; }
 
 body {
   margin: 0;
