--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -5,7 +5,7 @@
   position: sticky;
   top: 0;
   width: 100%;
-  background-color: #002642;
+  background-color: #1a51a8;
   box-shadow: 2px 3.5px 9.5px 0.5px rgba(107, 106, 128, 0.1);
   z-index: 1000;
   padding: auto;
@@ -18,34 +18,10 @@
     margin: auto;
     color: white; }
 
-.content-heading {
-  padding-left: 20px; }
-  @media screen and (min-width: 768px) {
-    .content-heading {
-      padding-left: 30px; } }
-
-.loader-wrapper {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 400px; }
-  .loader-wrapper .loader {
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
-    border-radius: 50%;
-    width: 64px;
-    height: 64px;
-    animation: spin 1.5s linear infinite; }
-
-@keyframes spin {
-  0% {
-    transform: rotate(0deg); }
-  100% {
-    transform: rotate(360deg); } }
-
 .building-info-wrapper {
-  background-color: white; }
+  background-color: white;
+  width: 400px;
+  margin: 40px auto; }
   .building-info-wrapper .info-box {
     min-height: 55px;
     border: 1px solid black;
@@ -56,13 +32,17 @@
   .building-info-wrapper .info-box.meeting {
     min-height: 80px; }
   .building-info-wrapper .primary-btn {
-    background-color: #002642;
+    background-color: #1a51a8;
     color: white;
     font-size: 16px;
-    font-weight: 600; }
+    width: 100%;
+    font-weight: 600;
+    margin: 3px 0;
+    min-height: 50px; }
 
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
-  background-color: #f4f4f4; }
+  font-family: Helvetica, Arial, sans-serif;
+  background-color: #f4f4f4;
+  height: 100%; }
