--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,3 @@
-@import "common.scss";
 @import "mixins.scss";
 @import "app.scss";
 
@@ -6,6 +5,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   background-color: #f4f4f4;
+  height: 100%; 
 }
